fix(system-components): Fix Scanner details item spacing

--- a/admin/webapp/websrc/app/common/styles/app/material/overrides/app-system-components.scss
+++ b/admin/webapp/websrc/app/common/styles/app/material/overrides/app-system-components.scss
@@ -15,5 +15,6 @@ mat-tab-group.component-tabs .mat-tab-body-content {
   app-scanner-details > div {
     height: 100%;
     overflow: auto !important;
+    align-content: flex-start;
   }
 }
